# libCallistaShared

./: .clang_complete  README.md  libcallistashared  meson.build
include/callista/: app.h  app.hpp  build_info.h  build_info.hpp  callista_stdint.h  detect_os.hpp  test.hpp  types.h  types.hpp
include/callista/document/: designer_document.h  designer_document.hpp  document.h  document.hpp
include/callista/graphics/: path.h  path.hpp  path_node.h
include/callista/os/: app_gtk.h
include/callista/ui/: button.h  button.hpp  document_window.h  document_window.hpp  gui_widget.h  gui_widget.hpp  icon.h  icon.hpp
include/callista/ui/gtk/: document_window.hpp
src/: app.cpp  app_gtk_impl.h  app_gtk_impl.hpp  document.cpp  function_stub.h  function_stub.hpp  test.cpp
src/ui/: button.cpp  document_window.cpp  ui_impl.cpp
src/ui/gtk/: button_impl.h  button_impl.hpp  document_window_impl.h  document_window_impl.hpp
